force-app/main/default/objects/Contact_Snapshot__c/Contact_Snapshot__c.object-meta.xml
<CustomObject>
    <description>Point in time snapshot of a Contact record to enable easy reference for tech team to triage and diagnose and for business users to fix any data quality differences following Contact merges.</description>
    <label>Contact Snapshot</label>
    <nameField>
        <displayFormat>CS-{00000}</displayFormat>
        <label>Contact Snapshot Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Snapshots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>