force-app/main/default/objects/Contact_Snapshot__c/fields/Contact_Information__c.field-meta.xml
<CustomField>
    <fullName>Contact_Information__c</fullName>
    <description>Store all Contact information in JSON format for later triage and reference.
Ideally viewed by a JSON viewer component.</description>
    <inlineHelpText>All Contact information in JSON format.</inlineHelpText>
    <label>Contact Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>