force-app/main/default/objects/Contact_Snapshot__c/fields/Direct_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Direct_Account_ID__c</fullName>
    <description>Separate field to store the contact&apos;s direct Account ID; Kept as text not a lookup</description>
    <label>Direct Account ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>