force-app/main/default/objects/Contact_Snapshot__c/fields/Snapshot_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Date_Time__c</fullName>
    <description>When the snapshot was taken (vs when it was created as a record).</description>
    <inlineHelpText>When the snapshot was taken (vs when it was created as a record).</inlineHelpText>
    <label>Snapshot Date Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>