force-app/main/default/objects/Contact_Snapshot__c/fields/Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Unique_Key__c</fullName>
    <description>Unique value for this record to allow upsert operations and prevent duplicates. Set by code as contactid|accountid.</contactid></description>
    <externalId>true</externalId>
    <label>Unique Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>